my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/pr34176.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr34176.c:33:10: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   33 |   static count = 0;
      |   ~~~~~~ ^
      |   int
1 error generated.
